--- a/initialideas.ipynb
+++ b/initialideas.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,8 @@
     "# Pydantic model for response formatting\n",
     "class ChatbotResponse(BaseModel):\n",
     "    answer: str = Field(..., description=\"Concise response to the query, under 100 words\", min_length=1, max_length=100)\n",
-    "    sources: List[str] = Field(default_factory=list, description=\"List of file names referenced in the answer\")"
+    "    sources: List[str] = Field(default_factory=list, description=\"List of file names referenced in the answer\")\n",
+    "    "
    ]
   },
   {
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,8 +287,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
